[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Train.gd" type="Script" id=2]
[ext_resource path="res://ToggleLanguage.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Train" type="Node"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 824.0
margin_bottom = 568.0
custom_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 30.0
custom_constants/separation = 24

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 572.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Тренировка Слов"
align = 1

[node name="ToggleLanguage" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 596.0
margin_right = 824.0

[node name="CenterContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 824.0
margin_bottom = 514.0
size_flags_vertical = 3
custom_constants/separation = 24
alignment = 1

[node name="StartWord" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_top = 194.0
margin_right = 824.0
margin_bottom = 218.0
text = "House"
align = 1
uppercase = true

[node name="EndWord" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_top = 242.0
margin_right = 824.0
margin_bottom = 266.0
size_flags_vertical = 1
text = "???"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 538.0
margin_right = 824.0
margin_bottom = 568.0
custom_constants/separation = 24
alignment = 1

[node name="ShowWord" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 400.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 10
text = "Посмотреть"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 424.0
margin_right = 824.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 10
text = "Знаю"

[connection signal="language_changed" from="MarginContainer/VBoxContainer/HBoxContainer/ToggleLanguage" to="." method="_on_ToggleLanguage_language_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ShowWord" to="." method="_on_ShowWord_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Continue" to="." method="_on_Continue_pressed"]
